<resources>
    <string name="app_name">Practica4</string>
    <string name="ic_order">Ordenar</string>
    <string name="ic_about">Acerca de...</string>
    <string name="mensaje_dialogo1">Practica 4 </string>
    <string name="mensaje_dialogo2">V 1.0 </string>
    <string name="mensaje_dialogo3">Alexandro Rodríguez Parrón</string>
    <string name="mensaje_dialogo4">Licencia cc</string>
    <string name="mensaje_dialogo5">(Creative Commons)</string>
    <string name="ok">OK</string>
    <string name="tv_categoria">Categoria</string>
    <string name="tv_Prioridad">Prioridad</string>
    <string name="tv_Estado">Estado</string>
    <string name="tv_Descripcion">Descripción</string>
    <string name="hintTecnico">Técnico Asignado</string>
    <string name="hintResumen">Breve Descripción</string>
    <string name="campoTecnico">Falta el campo del Técnico</string>
    <string name="campoBreveDescripcion">Falta el campo de la Breve Descripción</string>
    <string name="campoDescripcion">Falta el campo de la Descripción</string>
    <string name="titulo_formateado">Tarea %1$d</string>
    <string name="titulo">Aviso</string>
    <string name="mensaje">Está seguro que desea eliminar la tarea con id %1$d</string>

    //Arrays
    <string-array name="prioridad">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>
    <string-array name="categoria">
        <item>Reparación</item>
        <item>Instalación</item>
        <item>Mantenimiento</item>
        <item>Comercial</item>
        <item>otros</item>
    </string-array>
    <string-array name="estado">
        <item>Abierta</item>
        <item>En curso</item>
        <item>Terminada</item>
    </string-array>

</resources>